--- a/css-basic/css-basics_pink-box/css/styles.css
+++ b/css-basic/css-basics_pink-box/css/styles.css
@@ -9,9 +9,15 @@ body {
 }
 
 /* Put a selector here to select div elements (see index.html). */
-SELECTOR HERE {
-  font-family: cursive;
+div {
+  font-family: fantasy;
   padding: 8px;
+  width: 150px;
+  height: 150px;
+  background-color: hotpink;
+  color: white;
+  border-radius: 8px;
+  text-shadow: -1px 2px 1px hsl(334, 83%, 39%);
 
   /* Set the height and the width of the box to 150px. */
 
