--- a/css-positioning/css-positioning_absolute-position/css/styles.css
+++ b/css-positioning/css-positioning_absolute-position/css/styles.css
@@ -18,7 +18,8 @@ main {
 }
 
 .box {
-  display: flex;
+  display: fixed;
+  position: relative;
   align-items: center;
   justify-content: center;
   height: 80px;
@@ -37,16 +38,28 @@ main {
 
 .box--top-left {
   background-color: #aed6f1;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .box--top-right {
   background-color: #5dade2;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .box--bottom-left {
   background-color: #2874a6;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .box--bottom-right {
   background-color: #1b4f72;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
