--- a/css-positioning/css-positioning_layout-with-position/css/styles.css
+++ b/css-positioning/css-positioning_layout-with-position/css/styles.css
@@ -19,6 +19,10 @@ body {
  * document is scrolled.
  */
 .header {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
   background: #370182;
   color: #ffffff;
   box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
@@ -40,9 +44,13 @@ body {
  * document is scrolled.
  */
 .footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   height: 48px;
   color: #ffffff;
   background: #370182;
+  text
 }
 
 /**
@@ -50,6 +58,7 @@ body {
  * Define the card as the reference frame for its descendant elements that require absolute positioning.
  */
 .card {
+  position: relative;
   max-width: 90%;
   margin: 30px auto;
   padding: 20px;
@@ -68,6 +77,9 @@ body {
  * Place the bookmark in the top-right corner of each card.
  */
 .card__bookmark {
+  position: absolute;
+  top: 10px;
+  right: 10px;
   border: 1px solid #2e016d;
   background-color: #3f0097;
   font-size: 2em;
@@ -81,10 +93,19 @@ body {
  * and remains fixed in place when the document is scrolled.
  */
 .goto-top {
+  position: fixed;
+  right: 30px;
+  bottom: 70px;
   text-decoration: none;
   color: #f9f9f9;
   padding: 12px 24px;
   border-radius: 5px;
   background-color: #ff4a11;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
+}
+
+.footer__text {
+  margin-left: 20px;
+  line-height: 35px;
+  
 }
