--- a/css-structure/css-structure_taco-truck/theme.css
+++ b/css-structure/css-structure_taco-truck/theme.css
@@ -1,13 +1,13 @@
 :root {
   --body-bg: #fddcd2;
 
-  --header-bg: #ff4a11;
-  --header-text: #3f0097;
+  --header-bg: #201e1d;
+  --header-text: #ef97dc;
 
-  --main-bg: ##fddcd2;
-  --main-text: #ff4a11;
-  --main-title-bg: #3f0097;
+  --main-bg: #fddcd2;
+  --main-text: #201e1d;
+  --main-title-bg: #ef97dc;
 
-  --card-bg: #8336ff7b;
+  --card-bg: #60ee357b;
   --card-text: #201e1d;
 }
