--- a/css-structure/css-structure_custom-properties/css/styles.css
+++ b/css-structure/css-structure_custom-properties/css/styles.css
@@ -12,7 +12,6 @@ body {
 
 header {
   background: rgb(131 54 255/ 45%);
-  
 }
 
 h1 {
@@ -30,7 +29,7 @@ h2 {
 }
 
 strong {
-  color: #ff4a11;
+  color: var(--color-nemo);
 }
 
 section {
@@ -58,12 +57,12 @@ figure {
   gap: 10px;
   margin: 0;
   padding: 10px;
-  background-color: #ff4a11ff;
+  background-color: var(--color-nemo);
   border-radius: 4px;
 }
 
 figcaption {
-  color: rgb(255 255 255);
+  color: var(--color-foam);
 }
 
 nav {
@@ -77,8 +76,8 @@ a {
   font-size: smaller;
   padding: 8px;
   border-radius: 4px;
-  background-color: hsl(14 100% 53%);
-  color: #fff;
+  background-color: var(--color-nemo);
+  color: var(--color-foam);
 }
 
 a:hover,
@@ -88,13 +87,13 @@ a:focus-visible {
 }
 
 mark {
-  background-color: rgb(255 74 17);
+  background-color: var(--color-nemo);
   color: #ffffff;
   border-radius: 4px;
   letter-spacing: 0.025em;
 }
 
 ::selection {
-  background-color: #252629;
-  color: #ff4a11;
+  background-color: var(--color-granite);
+  color: var(--color-nemo);
 }
