--- a/css-structure/css-structure_custom-properties/css/styles.css
+++ b/css-structure/css-structure_custom-properties/css/styles.css
@@ -1,4 +1,4 @@
-@import "../global.css";
+@import "./global.css";
 
 *,
 *::before,
@@ -21,13 +21,13 @@ h1 {
   color: white;
   line-height: 1.4;
   margin: 0;
-  letter-spacing: 0.025em;
+  letter-spacing: var(--letter-spacing-standard);
   text-transform: uppercase;
   padding-block: 16px;
 }
 
 h2 {
-  letter-spacing: 0.025em;
+  letter-spacing: var(--letter-spacing-standard);
 }
 
 strong {
@@ -92,7 +92,7 @@ mark {
   background-color: var(--color-nemo);
   color: #ffffff;
   border-radius: 4px;
-  letter-spacing: 0.025em;
+  letter-spacing: var(--letter-spacing-standard);
 }
 
 ::selection {
